# OSM-factorysim

./: .gitignore  CMakeLists.txt  Kleine productiestraat.yaml  README.md
src/libs/: CMakeLists.txt
src/libs/Logger/: Logger.cpp  Logger.h
src/libs/cereal/: CMakeLists.txt
src/libs/command_line/: CommandLineArguments.h
src/libs/configuration_serializer/: CMakeLists.txt  ConfigurationReader.cpp  ConfigurationReader.h
src/libs/models/: CMakeLists.txt  Configuration.cpp  Configuration.h  FinalStatistics.cpp  FinalStatistics.h  Machine.cpp  Machine.h  MachineConfiguration.cpp  MachineConfiguration.h  MachineFinalStatistics.cpp  MachineFinalStatistics.h  MachineProductFinalStatistics.cpp  MachineProductFinalStatistics.h  MachineProductStatistics.cpp  MachineProductStatistics.h  MachineStatistics.cpp  MachineStatistics.h  PostProcessInfo.cpp  PostProcessInfo.h  PreviousMachine.cpp  PreviousMachine.h  Product.cpp  Product.h  ProductionLine.cpp  ProductionLine.h  SimulationInfo.cpp  SimulationInfo.h
src/libs/network/: CMakeLists.txt  Client.cpp  Client.h  Connection.cpp  Connection.h  Manager.cpp  Manager.h  Message.h  Protocol.h  Server.cpp  Server.h  Settings.cpp  Settings.h
src/libs/patterns/: CMakeLists.txt  Singleton.h
src/libs/silly_objects/: BetterObject.cpp  CMakeLists.txt  Lib1.cpp
src/libs/utils/: CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  RandomHelper.cpp  RandomHelper.h  TimeHelper.cpp  TimeHelper.h
src/libs/yaml-cpp/: CMakeLists.txt
src/machine_control/: Application.cpp  Application.h  CMakeLists.txt  Controller.cpp  Controller.h  ControllerNotificationEventIds.h  Machine.cpp  Machine.h  Main.cpp  NetworkComponent.cpp  NetworkComponent.h  NotificationEventTypes.h  SimulationApplication.cpp  SimulationApplication.h  SimulationController.cpp  SimulationController.h  SimulationMachine.cpp  SimulationMachine.h  SimulationMachinePostProcess.cpp  SimulationMachinePostProcess.h  SimulationNetworkComponent.cpp  SimulationNetworkComponent.h  config.h
src/machine_control/states_application/: ApplicationState.cpp  ApplicationState.h  BrokenState.cpp  BrokenState.h  ConfigureState.cpp  ConfigureState.h  ConnectState.cpp  ConnectState.h  IdleState.cpp  IdleState.h  InOperationState.cpp  InOperationState.h  Initialize.cpp  Initialize.h  ProductionState.cpp  ReceiveConfig.cpp  ReceiveConfig.h
src/machine_control/states_machine/: MachineState.cpp  MachineState.h
src/machine_control/states_production/: ConnectState.cpp  ConnectState.h  ProcessProductState.cpp  ProcessProductState.h  ProductionState.cpp  ProductionState.h  ReceiveConfig.cpp  ReceiveConfig.h
src/machine_control/states_simulation/: ConnectSimulationState.cpp  ConnectSimulationState.h  Event.cpp  Event.h  FindProductControlState.cpp  FindProductControlState.h  InitializeSimulationState.cpp  InitializeSimulationState.h  OffState.cpp  OffState.h  OnState.cpp  OnState.h  ShutdownState.cpp  ShutdownState.h  SimulationState.cpp  SimulationState.h  WaitForProductControlState.cpp  WaitForProductControlState.h
src/machine_control/states_simulation_controller/: ConnectSimulationState.cpp  FindProductControlState.cpp  FindProductControlState.h  InitializeSimulationState.cpp  OffState.cpp  OnState.cpp  SimulationState.cpp  WaitForProductControlState.cpp
src/production_control/: AppConnectionHandler.cpp  AppConnectionHandler.h  Application.cpp  Application.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommNet.cpp  CommNet.h  Configuration.cpp  Configuration.h  ConfigurationReader.cpp  ConfigurationReader.h  ConnectionHandler.cpp  ConnectionHandler.h  Controller.cpp  Controller.h  InfiniteBuffer.cpp  InfiniteBuffer.h  LocalSimulationMachine.cpp  LocalSimulationMachine.h  Logger.cpp  Logger.h  Machine.cpp  Machine.h  MachineConfiguration.cpp  MachineConfiguration.h  MachineConfigurationConfiguration.cpp  MachineConfigurationConfiguration.h  Main.cpp  NetworkMapper.cpp  NetworkMapper.h  NotificationTypes.h  Product.cpp  Product.h  ProductConfiguration.cpp  ProductConfiguration.h  ProductionLineConfiguration.cpp  ProductionLineConfiguration.h  ResultLogger.cpp  (+15 more)
src/production_control/Models/: Configuration.cpp  Configuration.h  ConfigurationReader.cpp  ConfigurationReader.h  MachineConfiguration.cpp  MachineConfiguration.h  MachineConfigurationConfiguration.cpp  MachineConfigurationConfiguration.h  Main.cpp  ProductConfiguration.cpp  ProductConfiguration.h  ProductionLineConfiguration.cpp  ProductionLineConfiguration.h  SimulationInfoConfiguration.cpp  SimulationInfoConfiguration.h
src/production_control/States/: BroadCastState.cpp  BroadCastState.h  ConnectMachinesState.cpp  ConnectMachinesState.h  InitSimulationState.cpp  InitSimulationState.h  LoadConfigState.cpp  LoadConfigState.h  OperationState.cpp  OperationState.h  SimulationBroadcastState.cpp  SimulationBroadcastState.h  WaitForConnectionsState.cpp  (+3 more)
src/visualizer/: Application.cpp  Application.h  BufferUpdateEvent.h  CMakeLists.txt  Canvas.cpp  Canvas.h  ConfigUpdateEvent.cpp  ConfigUpdateEvent.h  Event.cpp  Event.h  FileApplication.cpp  FileApplication.h  FileReader.cpp  FileReader.h  LiveApplication.cpp  LiveApplication.h  LiveNetwork.cpp  LiveNetwork.h  Machine.cpp  Machine.h  MachineView.cpp  MachineView.h  Main.cpp  MainWindow.cpp  MainWindow.h  StatusUpdateEvent.h  Window.cpp  Window.h  WindowApplication.cpp  WindowApplication.h
tests/machine_control/: Application_test.cpp  CMakeLists.txt  Controller_test.cpp  Machine_test.cpp  Main.cpp  Network_test.cpp  Object_test.cpp  Production_test.cpp  controller_test.cpp  production_test.cpp  state_inclusions.h
tests/production_control/: CMakeLists.txt  InOperationStateTests.cpp  Main.cpp  Object_test.cpp  application_test.cpp  controller_test.cpp  log_test.cpp  machine_test.cpp  testconfig.yaml  util_tests.cpp
tests/test_helpers/: CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.h  MockNetwork.cpp  MockNetwork.h  MockObserver.cpp  MockObserver.h
tests/visualizer/: CMakeLists.txt  FileReaderTests.cpp  Main.cpp  Object_test.cpp
(+238 files in other folders)
